# relatorio-oae

./: .env.example  .gitignore  INICIAR_APLICACAO.md  PROJECT_CONTEXT.md  README.md  SPECIFICATION.md  TUTORIAL_DESKTOP.md  electron-builder.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: __init__.py  config.py  main.py
backend/api/: management_schemas.py  management_service.py  serializer.py  server.py  server_desktop.py  workspace.py
backend/core/: __init__.py  document_structure.py  docx_formatting.py  parser_excel.py  parser_images.py  photo_generator.py  photo_layout.py  photo_numbering.py  report_image_staging.py  runtime_settings.py  text_generator.py  validators.py  word_generator.py
backend/models/: __init__.py  anomaly.py  anomaly_semantics.py  image.py  inspection.py  structure.py
backend/rules/: __init__.py  anomaly_catalog.yaml  anomaly_parser.py  descriptions.yaml  grouping.py  legenda.py  legenda.yaml  photo_section_order.py  runtime_settings.json
backend/scripts/: create_template.py
backend/services/: __init__.py  report_pipeline.py
backend/templates/: PLACEHOLDERS.md
data/: legenda.md
electron/: backend-manager.ts  config.ts  error.html  logger.ts  main.ts  preload.ts  splash.html  tsconfig.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
pyinstaller/: oae-backend.spec
scripts/: build-backend.ps1  build-desktop.ps1  copy-electron-assets.mjs  create-desktop-icon.py  debug_photo_layout.py  dev-desktop.ps1  dist-desktop.ps1  smoke-desktop-backend.ps1  smoke-desktop.ps1
(+62 files in other folders)
